fix: top z-index

--- a/css/all.css
+++ b/css/all.css
@@ -247,6 +247,7 @@ body {
   position: fixed;
   bottom: 5vh;
   right: 5vw;
+  z-index: 99;
 }
 .top a {
   color: #fff;
